Eliminated unnecessary Boolean allocations.